@@ -2,6 +2,8 @@ package com.bshuiban.baselibrary.utils.aes;
 
 import android.util.Log;
 
+import java.io.UnsupportedEncodingException;
+
 import javax.crypto.Cipher;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
@@ -15,43 +17,88 @@ public class AESUtils {
 
     private static final String key = "7mm:rYRnadsr1r1o";
     private static final String iv = "7mm:rYRnadsr1r1o";
-
+    /** 算法/模式/填充 **/
+    private static final String CipherMode = "AES/CBC/PKCS5Padding";
     public static String encrypt(String data) {
         try {
 
             Cipher cipher = Cipher.getInstance("AES/CBC/NoPadding");
+//            Cipher cipher = Cipher.getInstance(CipherMode);
             int blockSize = cipher.getBlockSize();
-
             byte[] dataBytes = data.getBytes();
             int plaintextLength = dataBytes.length;
-            if (plaintextLength % blockSize != 0) {
+            Log.e("TAG", "encrypt: "+blockSize+"， "+plaintextLength );
+            if (blockSize>0 && plaintextLength % blockSize != 0) {
                 plaintextLength = plaintextLength + (blockSize - (plaintextLength % blockSize));
             }
-
             byte[] plaintext = new byte[plaintextLength];
             System.arraycopy(dataBytes, 0, plaintext, 0, dataBytes.length);
-
             SecretKeySpec keyspec = new SecretKeySpec(key.getBytes(), "AES");
             IvParameterSpec ivspec = new IvParameterSpec(iv.getBytes());
 
             cipher.init(Cipher.ENCRYPT_MODE, keyspec, ivspec);
             byte[] encrypted = cipher.doFinal(plaintext);
-            //ss = URLDecoder.decode(new String(new sun.misc.BASE64Encoder().encode(encrypted).getBytes(),"gbk"), "gbk");
+            //byte[] encrypted = cipher.doFinal(data.getBytes("UTF-8"));
+            //return Base64.encode(encrypted);
+//            return byte2hex(encrypted);
             return new BASE64Encoder().encode(encrypted);
-
         } catch (Exception e) {
             e.printStackTrace();
-            Log.e("TAG", "encrypt: 加密失败" );
+            Log.e("TAG", "encrypt: 加密失败");
             return null;
         }
     }
+    /** 创建密钥 **/
+    private static SecretKeySpec createKey(String key) {
+        byte[] data = null;
+        if (key == null) {
+            key = "";
+        }
+        StringBuffer sb = new StringBuffer(16);
+        sb.append(key);
+        while (sb.length() < 16) {
+            sb.append("0");
+        }
+        if (sb.length() > 16) {
+            sb.setLength(16);
+        }
+        try {
+            data = sb.toString().getBytes("UTF-8");
+        } catch (UnsupportedEncodingException e) {
+            e.printStackTrace();
+        }
+        return new SecretKeySpec(data, "AES");
+    }
+
+    private static IvParameterSpec createIV(String password) {
+        byte[] data = null;
+        if (password == null) {
+            password = "";
+        }
+        StringBuffer sb = new StringBuffer(16);
+        sb.append(password);
+        while (sb.length() < 16) {
+            sb.append("0");
+        }
+        if (sb.length() > 16) {
+            sb.setLength(16);
+        }
+        try {
+            data = sb.toString().getBytes("UTF-8");
+        } catch (UnsupportedEncodingException e) {
+            e.printStackTrace();
+        }
+        return new IvParameterSpec(data);
+    }
 
     public static String desEncrypt(String data) {
-        try
-        {
+        try {
 
             byte[] encrypted1 = new BASE64Decoder().decodeBuffer(data);
+            //byte[] encrypted1 = Base64.decode(data);
+            //byte[] encrypted1 = hex2byte(data);
 
+            //Cipher cipher = Cipher.getInstance(CipherMode);
             Cipher cipher = Cipher.getInstance("AES/CBC/NoPadding");
             SecretKeySpec keyspec = new SecretKeySpec(key.getBytes(), "AES");
             IvParameterSpec ivspec = new IvParameterSpec(iv.getBytes());
@@ -59,13 +106,42 @@ public class AESUtils {
             cipher.init(Cipher.DECRYPT_MODE, keyspec, ivspec);
 
             byte[] original = cipher.doFinal(encrypted1);
-            String originalString = new String(original);
+            String originalString = new String(original,"UTF-8");
 
             return originalString;
-        }
-        catch (Exception e) {
+        } catch (Exception e) {
             e.printStackTrace();
             return null;
         }
+    }
+    /** 字节数组转成16进制字符串 **/
+    public static String byte2hex(byte[] b) { // 一个字节的数，
+        StringBuffer sb = new StringBuffer(b.length * 2);
+        String tmp = "";
+        for (int n = 0; n < b.length; n++) {
+            // 整数转成十六进制表示
+            tmp = (java.lang.Integer.toHexString(b[n] & 0XFF));
+            if (tmp.length() == 1) {
+                sb.append("0");
+            }
+            sb.append(tmp);
+        }
+        return sb.toString().toUpperCase(); // 转成大写
+    }
+
+
+    /** 将hex字符串转换成字节数组 **/
+    private static byte[] hex2byte(String inputString) {
+        if (inputString == null || inputString.length() < 2) {
+            return new byte[0];
+        }
+        inputString = inputString.toLowerCase();
+        int l = inputString.length() / 2;
+        byte[] result = new byte[l];
+        for (int i = 0; i < l; ++i) {
+            String tmp = inputString.substring(2 * i, 2 * i + 2);
+            result[i] = (byte) (Integer.parseInt(tmp, 16) & 0xFF);
+        }
+        return result;
     }
 }
